--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -7,5 +7,10 @@
   <body>
     <h1>Hello</h1>
     <p>I am practicing various things this summer</p>
+    <ol>
+      <li>First item</li>
+      <li>Second item</li>
+      <li>Third item</li>
+    </ol>
   </body>
 </html>
