practiced various features

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Hello World</title>
   </head>
   <body>
+    <a href="register.html">
+      <h4>Register</h4>
+    </a>
     <h1>Hello</h1>
     <p>I am practicing various things this summer</p>
     <ol>
@@ -12,5 +16,10 @@
       <li>Second item</li>
       <li>Third item</li>
     </ol>
+    <ul>
+      <li>potato</li>
+      <li>tomato</li>
+      <li>chicken</li>
+    </ul>
   </body>
 </html>
