tried to copy a website for practice

--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -6,20 +6,21 @@
     <title>Hello World</title>
   </head>
   <body>
-    <a href="register.html">
-      <h4>Register</h4>
-    </a>
-    <h1>Hello</h1>
-    <p>I am practicing various things this summer</p>
-    <ol>
-      <li>First item</li>
-      <li>Second item</li>
-      <li>Third item</li>
-    </ol>
-    <ul>
-      <li>potato</li>
-      <li>tomato</li>
-      <li>chicken</li>
-    </ul>
+    <div class="blank">
+
+    </div>
+    <nav >
+      <a href="#" class="nav" id="home"><h4>Home</h4></a>
+      <a href="#"class="nav"><h4>What is Coding?</h4></a>
+      <a href="#"class="nav"><h4>Tutorials</h4></a>
+      <a href="#"class="nav"><h4>Training</h4></a>
+      <a href="#"class="nav"><h4>Reviews</h4></a>
+      <a href="#"class="nav"><h4>Knowledge Center</h4></a>
+
+    </nav>
+    <div class="You">
+      <p>You are here: <a href="#" class="yes">Home</a> / Brush Up on Your HTML and CSS By Replicating Another Website</p><br>
+      <h1>Brush Up on Your HTML and CSS By Replicating Another Website</h1>
+    </div
   </body>
 </html>
