--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -21,6 +21,10 @@
     <div class="You">
       <p>You are here: <a href="#" class="yes">Home</a> / Brush Up on Your HTML and CSS By Replicating Another Website</p><br>
       <h1>Brush Up on Your HTML and CSS By Replicating Another Website</h1>
-    </div
+    </div>
+    <script type="text/javascript" src="script.js">
+
+    </script>
   </body>
+
 </html>
