--- a/frontEnd/index.html
+++ b/frontEnd/index.html
@@ -22,6 +22,7 @@
       <p>You are here: <a href="#" class="yes">Home</a> / Brush Up on Your HTML and CSS By Replicating Another Website</p><br>
       <h1>Brush Up on Your HTML and CSS By Replicating Another Website</h1>
     </div>
+     <button type="button" name="button">Click Me</button>
     <script type="text/javascript" src="script.js">
 
     </script>
